...
  onAdd,
  onDelete,
  onReset,
  onDragEnd,
}: TagManagementPageContentProps) {
  return (
    <View testID="tag-management-root" style={styles.page}>
      <TagManagementTagList
        tags={tags}
        onDelete={onDelete}
        onDragEnd={onDragEnd}
        ListFooterComponent={
          <View style={styles.footer}>
...
